--- a/todo-app/src/frontend/index.html
+++ b/todo-app/src/frontend/index.html
@@ -13,7 +13,7 @@
     <h1>Todo App is cool !!!</h1>
     <form id="todo-form">
       <input type="text" id="todo-input" placeholder="Add a new task" required>
-      <button type="submit">-></button>
+      <button type="submit">Add</button>
     </form>
     <ul id="todo-list"></ul>
   </div>
